# streamctl

./: Cargo.toml  LICENSE  README.md
src/: kinesis.rs  main.rs
